2006-03-14  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/icqt.py:
	* src/tlib/oscar.py:
	Fixed handling of icq statuses and flags.

	* src/legacy/icqt.py:
	Fixed encoding issues with nicknames (thanks Norbert!)

	* src/main.py:
	Fixed bug with call to handleResourcePresence (thanks Motienko!)

	* src/legacy/glue.py:
	Fixed possible crash with inactive session.

	* src/legacy/icqt.py:
	Fixed bug in how gotNickname was called.

2006-03-12  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/main.py:
	Removed raise (that was there for testing)

	* src/contact.py:
	* src/globals.py:
	* src/jabw.py:
	* src/main.py:
	* src/misciq.py:
	* src/register.py:
	* src/session.py:
	* src/utils.py:
	Starting really using globals.

	* src/tlib/oscar.py:
	* src/legacy/icqt.py:
	Started passing direct variables instead of arrays.

2006-03-11  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/config.py:
	* src/xmlconfig.py:
	* src/main.py:
	* src/debug.py:
	* src/legacy/glue.py:
	* src/legacy/icqt.py:
	Added true integer checking in config file.

	* src/web/handler.py:
	Added handling for port specification. (username@hostname%port)

	* src/web/xmppcred.py:
	* src/tlib/twistwrap.py:
	* src/tlib/ifcompat.py:
	* src/tlib/xmlstream.py:
	Added functionality to make web interface compatible with twisted 1.*.

	* src/tlib/oscar.py:
	Adjusted snac handling to make sure calls look the same.

	* src/debug.py:
	Killed 'self' debug instance.

	* src/legacy/glue.py:
	Adjusted to check for offline vs online for messages.

	* src/tlib/scheduler.py:
	Minor cosmetic cleanup.

	* src/tlib/oscar.py:
	Added better repr printing of various objects.

2006-03-09  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/glue.py:
	Updated version to post-0.7a.

	* src/legacy/icqt.py:
	Added recursive/improved group parse.

2006-03-06  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/main.py:
	* PyICQt.py:
	Added option to enable profiling.

	* src/legacy/glue.py:
	Updated version to 0.7a.
